style.css
/* ... */
*,
*::after,
*::before {box-sizing: border-box;}
 
/* Main
----------------------------------------------------------- */
body { background-color: #ddd; font: 14px/1.8 'Open Sans',Helvetica,Arial,sans-serif; color: #666; -webkit-text-size-adjust: 100%; }
body a { color: var(--universal-accent-color); transition: color 250ms linear }
body a:hover { text-decoration: underline; color: var(--universal-accent-color); }
img,
svg,
video,
audio,
picture { display: block; height: auto; max-width: 100%; }
picture { width: fit-content; }
video { background: #000; color-scheme: dark; }
audio { height: revert; width: 100%; color-scheme: dark; }

#wrap { width: calc(100% - 200px); margin: 0 auto; -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;}
.container { background: #fff; padding: 30px; margin-top: 10px; box-shadow: var(--u-box-shadow)}
.has-sidebar { float: left; width: calc(100% - 300px); }
#sidebar { float: right; width: 250px; font-size: 0.929em; }
 
/* Commons
----------------------------------------------------------- */
p:empty, p:empty:before { display: none; }
.remove-margin { margin-right: 0 !important }
.clearfix:after { content: "."; display: block; clear: both; visibility: hidden; line-height: 0; height: 0; }
.clear { clear: both }
blockquote { position: relative; font-style: italic; font-weight: 600; color: #000; quotes: "\201C""\201D""\2018""\2019"; }
blockquote:before,
blockquote:after { color: #000; font-weight: 100; font-size: 2.5em; line-height: 0; position: relative; top: 0.95rem; content: open-quote; padding-right: 3px; }
blockquote:after { content: close-quote; padding-right: 0; }
blockquote p { display: inline; }
pre, code { font-family: monospace; background: #212121; color: #aaa; padding: 20px; line-height: 25px; white-space: pre-wrap; white-space: -moz-pre-wrap; white-space: -pre-wrap; white-space: -o-pre-wrap; word-wrap: break-word; display: block; max-height: 350px; overflow: auto;}
code { border-left: 5px solid var(--universal-accent-color-dark); }
address { letter-spacing: 1px; }
mark { background-color: var(--universal-accent-color-light); color: var(--universal-accent-color-text-light); display: inline-block; padding: 0 8px; }
var { font-weight: bold; color: var(--universal-accent-color-light);}

html body dialog,
html body [popover],
html body dialog[open],
html body dialog.showModal,
html body [popover]:popover-open { border-radius: 2px !important; }
html body dialog::backdrop { -webkit-backdrop-filter: blur(5px) !important; backdrop-filter: blur(5px) !important; background: rgba(0, 0, 0, 0.5) !important; }
dialog, [popover] { width: max-content; height: max-content; padding: 15px; border: none; background: #fff; box-shadow: var(--u-box-shadow) }
dialog[open] { z-index: 99999 !important; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%) }

.sticky {}
.gallery-caption {}
.textwidget,
.entry .inner-post { display: grid; gap: 20px; grid-template-columns: 100% }
.entry .inner-post p { overflow-wrap: break-word; word-break: break-word; hyphens: auto; }
.entry ul,
.entry ol { margin-left: 15px; }
.entry ul { list-style: disc }
.entry ol { list-style: decimal }
.entry ul li,
.entry ol li { line-height: 2rem }
a .avatar,
.entry a img,
.wp-caption a img { filter: brightness(0.9); transition: filter 250ms ease-in-out }
a:hover .avatar,
.entry a:hover img,
.wp-caption a:hover { filter: brightness(1.0) }
.tiktok-embed,
.tiktok-embed iframe { padding: 0 !important; margin: 0 !important; border-radius: 0 !important; max-width: 100% !important;}
.tiktok-embed::after,
.tiktok-embed::before { content: "" }
embed,
iframe { width: 100% !important; }
 
/* Typography
----------------------------------------------------------- */
h1, h2, h3, h4, h5, h6 { font-weight: 600; font-family: 'Open Sans',Helvetica,Arial,Helvetica,sans-serif; }
h1, h2, h3, h4, h5, h6,
h1 a, h2 a, h3 a, h4 a, h5 a, h6 a { color: #000 }
h1 a:hover,
h2 a:hover,
h3 a:hover,
h4 a:hover,
h5 a:hover,
h6 a:hover { color: var(--universal-accent-color); text-decoration: none; }
h1 { font-size: 1.714em; }
h2 { font-size: 1.286em }
h3 { font-size: 1.286em }
h4 { font-size: 1em }
h5 { font-size: 0.857em }
h6 { font-size: 0.714em }
#post,
.entry { container: wpx-gallery/inline-size; font-size: 1em }
p.lead { font-size: 1.500em; line-height: 27px; color: #777; }
em { font-style: italic }
strong { font-weight: bold }
small { font-size: 80% }
hr { border: solid rgba(201,201,201,0.5); border-width: 1px 0 0; clear: both; margin: 0; height: 0; }
p a,
p a:visited { line-height: inherit }
a:link { text-decoration: none }
a:focus { outline: 0 }
a { outline: 0;}
a:hover { cursor: pointer }
.page-heading{ padding: 20px; background: #fff; margin-bottom: 10px; font-weight: 300; text-align: center; margin-top: 10px; box-shadow: var(--u-box-shadow)}
.page-heading h1,
.page-heading h2 { margin: 0; font-size: 2.000em; line-height: 1.2em; font-weight: 300; }
.page-heading #searchbar label { padding-bottom: 0;}
 
/* Header
----------------------------------------------------------- */
#header { position: relative; background: #111; box-shadow: var(--u-box-shadow); padding: 30px; }
#logo a h1 { font-weight: 700; margin: 0; text-decoration: none; color: #fff; padding: 40px; text-transform: uppercase; letter-spacing: 1px; -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
#logo img { max-height: 128px }
#logo h1, #text-logo { font-size: 2.286em; line-height: 1em; margin: 0; }
 
/* Navigation
----------------------------------------------------------- */
#navigation { max-width: 100%; font-size: 18px }
#navigation ul { display: flex; justify-content: center; align-items: center; list-style: none; width: max-content; padding: 0; border-radius: 20px; }
#navigation ul li { margin: 0 4px; border-radius: 2px; transition: background 250ms linear 0s }
#navigation ul li { display: block; position: relative; min-width: 100px }
/* ... */

